<?xml version="1.0"?>
<package format="2">
  <name>comms</name>
  <version>0.0.0</version>
  <description>The pushplan comms package</description>
  <author email="dhruvsaxena@cmu.edu">Dhruv Mauria Saxena</author>
  <maintainer email="dhruvsaxena@cmu.edu">Dhruv Mauria Saxena</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>moveit_msgs</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>trajectory_msgs</depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
</package>
